--- a/uzduotys/uzduotys.html
+++ b/uzduotys/uzduotys.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
 </head>
 <body>
+<h1> Antraštė 1</h1><br>
+<p>Paragrafas 1</p><br>
+<p>Paragrafas 2</p><br>
+<p>Paragrafas 3</p><br><br>
+
+
 
 </body>
 </html>
