--- a/uzduotys/uzduotys.html
+++ b/uzduotys/uzduotys.html
@@ -1,10 +1,13 @@
 <head>
 </head>
 <body>
-<h1> Antraštė 1</h1><br>
+<h1>Antraštė 1</h1><br>
 <p>Paragrafas 1</p><br>
 <p>Paragrafas 2</p><br>
 <p>Paragrafas 3</p><br><br>
+<h2>Antraštė 2</h2><br>
+<p>Paragrafas 4</p><br>
+<p>Paragrafas 5</p><br>
 
 
 
