--- a/uzduotys/uzduotys.html
+++ b/uzduotys/uzduotys.html
@@ -6,7 +6,7 @@
 <p>Paragrafas 2</p><br>
 <p>Paragrafas 3</p><br><br>
 <h2>Antraštė 2</h2><br>
-<p><b>Paragrafas</b> 4 <strong>su</strong> <i>daug</i> <em>teksto</em> <mark>>tam</mark>, <small>kad</small> <del>galečiau</del> <ins>uždėti</ins> <sup>stilizavimo</sup> <sub>žymas</sub>. Pasirinktas <strong><i><ins>žodis</ins></i></strong></p><br>
+<p><b>Paragrafas</b> 4 <strong>su</strong> <i>daug</i> <em>teksto</em> <mark>tam</mark>, <small>kad</small> <del>galečiau</del> <ins>uždėti</ins> <sup>stilizavimo</sup> <sub>žymas</sub>. Pasirinktas <strong><i><ins>žodis</ins></i></strong></p><br>
 <p>Paragrafas 5</p><br>
 
 
