--- a/uzduotys/uzduotys2.html
+++ b/uzduotys/uzduotys2.html
@@ -44,6 +44,36 @@
 </ol>
 
 <div>Tinklalapių kūrimas</div>
+<ul>
+    <li>Frontend, naudojamos technologijos:</li>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript, galima naudoti šiuos karkasus:</li>
+        <ul style="square">
+            <li>jQuery</li>
+            <li>AngularJS</li>
+            <li>ReactJS</li>
+            <li>...</li>
+        </ul>
+    </ol>
+    <li>Backend, galima rinktis norimą technologiją:</li>
+    <ul style="circle">
+        <li>PHP</li>
+        <li>C#</li>
+        <li>Java</li>
+        <li>NodeJS</li>
+        <li>...</li>
+    </ul>
+    <li>Duomenų bazės, galima rinktis norimą:</li>
+    <ul style="circle">
+        <li>MySQL</li>
+        <li>MariaDB</li>
+        <li>PostgreSQL</li>
+        <li>...</li>
+    </ul>
+</ul>
+<br>
 
 </body>
 </html>
