--- a/uzduotys/forma4.html
+++ b/uzduotys/forma4.html
@@ -15,8 +15,9 @@
     <label for="tema"></label>
     <input name="tema" type="text" id="tema" placeholder="Žinutės tema" />
     <br>
+    <label for="zinute"></label>
     <textarea name="zinute" rows="3" cols="15" id="zinute" placeholder="Žinutė"></textarea><br>
-<label for="siusti"></label>
+    <label for="siusti"></label>
     <input name="siusti" type="submit" id="siusti" value="Siųsti žinutę">
 </form>
 </body>
