--- a/uzduotys/forma2.html
+++ b/uzduotys/forma2.html
@@ -7,10 +7,10 @@
 <body>
 Antra forma:<br><br>
 <form action="http://localhost:8080/kontaktai" method="POST" target="_blank">
-    <input type="text" id="name" name="name" placeholder="Jūsų vardas" /><br>
-    <input type="email" id="email" name="email" placeholder="Jūsų el. pašto adresas" /><br>
-    <input type="text" id="tema name="tema" placeholder="Žinutės tema" /><br>
-    <textarea name="zinute" rows="3" cols="15" id="zinute" placeholder="Žinutė"></textarea><br>
+    <input type="text" name="name" placeholder="Jūsų vardas" /><br>
+    <input type="email" name="email" placeholder="Jūsų el. pašto adresas" /><br>
+    <input type="text" name="tema" placeholder="Žinutės tema" /><br>
+    <textarea name="zinute" rows="3" cols="15" placeholder="Žinutė"></textarea><br>
     <input type="button" onclick="formSubmit()" value="Siųsti žinutę"/>
     <input type="submit" value="Siųsti žinutę"/><br>
 </form>
