--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<html>
+<html lang="lt">
 
 <head>
-
+<meta charset="UTF-8"/>
+    <title>Mano puslapis</title>
+    <link rel="stylesheet" href="css/dizainas.css">
 </head>
 
 <body>
-Labas pasauli1!
+
+<header>Headeris<br>
+        Headeris<br>
+        Headeris<br></header>
+<div>
+<aside>Reklama</aside>
+
+<main>Turinys</main>
+</div>
+<footer>Visos teisės saugomos 2020&copy;</footer>
+
 </body>
 
 </html>
