--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta charset="UTF-8"/>
     <title>Mano puslapis</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/dizainas.css">
+
 </head>
 
 <body>
@@ -12,11 +14,11 @@
 <header>Headeris<br>
         Headeris<br>
         Headeris<br></header>
-<div>
+
 <aside>Reklama</aside>
 
 <main>Turinys</main>
-</div>
+
 <footer>Visos teisės saugomos 2020&copy;</footer>
 
 </body>
