--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/dizainas.css">
 
+
 </head>
 
 <body>
@@ -21,6 +22,8 @@
 <main>Turinys</main>
 
 <footer>Visos teisės saugomos 2020&copy;</footer>
+
+<script src="javascript/uzduotys.js"></script>
 
 </body>
 
