--- a/index.html
+++ b/index.html
@@ -1,30 +1,54 @@
 <html lang="lt">
-
 <head>
-<meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
     <title>Mano puslapis</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/dizainas.css">
-
-
+    <link rel="stylesheet" href="css/elementai.css">
 </head>
+<body class="animate">
 
-<body>
+<header>
+    <img src="/img/logo.png" alt="logo">
+    <nav>
+        <a onclick="pakeistiPuslapi('about')">Apie</a>
+        <a onclick="pakeistiPuslapi('portfolio')">Portfolio</a>
+        <a onclick="pakeistiPuslapi('contacts')">Kontaktai</a>
+    </nav>
+</header>
+<aside>
+    <section class="amalker">
+        <h4>Reklama:</h4>
+        <img src="https://picsum.photos/240/300" alt="Reklama">
+    </section>
+</aside>
+<main>
+    <section id="about">   <h1>Apie mane</h1>
+        <img src="/img/profilis.jpg" alt="Tautvydas Dulskis">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem eos laboriosam ratione saepe! Autem delectus
+        distinctio, dolor dolorem ex ipsa labore quae quia tenetur velit! Ad adipisci cum eos ipsum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem eos laboriosam ratione saepe! Autem delectus
+        distinctio, dolor dolorem ex ipsa labore quae quia tenetur velit! Ad adipisci cum eos ipsum.
+        <section class="portfolio_item" id="elementas">
+            <h4>Mano naujausias darbas:</h4>
+            <img src="https://picsum.photos/240/240" alt="Darbas">
+        </section>
+    </section>
+    <section id="portfolio"><h1>Portfolio</h1></section>
+    <section id="contacts"><h1>Kontaktai</h1></section>
+</main>
+<footer>
+    <span>
+        Visos teisės saugomos 2020&copy;
+    </span>
+</footer>
 
-<header>Headeris<br>
-        Headeris<br>
-        Headeris<br></header>
-
-<aside>Reklama</aside>
-
-<main>Turinys</main>
-
-<footer>Visos teisės saugomos 2020&copy;</footer>
-
-<script src="javascript/uzduotys.js"></script>
+<script src="js/teswt.js"></script>
+<script src="navigacija.js"></script>
 
 </body>
-
 </html>
