--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <header>
     <img src="/img/logo.png" alt="logo">
     <nav>
-        <a onclick="pakeistiPuslapi('about')">Apie</a>
-        <a onclick="pakeistiPuslapi('portfolio')">Portfolio</a>
-        <a onclick="pakeistiPuslapi('contacts')">Kontaktai</a>
+        <a onclick="pakeistiPuslapi(this, 'about')" class="active">Apie</a>
+        <a onclick="pakeistiPuslapi(this, 'portfolio')">Portfolio</a>
+        <a onclick="pakeistiPuslapi(this, 'contacts')">Kontaktai</a>
     </nav>
 </header>
 <aside>
