pataisyta is kd

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/dizainas.css">
     <link rel="stylesheet" href="css/elementai.css">
+
+
+
 </head>
 <body class="animate">
 
 <header>
     <img src="/img/logo.png" alt="logo">
     <nav>
-        <a onclick="pakeistiPuslapi(this, 'about')" class="active">Apie</a>
-        <a onclick="pakeistiPuslapi(this, 'portfolio')">Portfolio</a>
-        <a onclick="pakeistiPuslapi(this, 'contacts')">Kontaktai</a>
+        <a href="#about" class="active">Apie</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contacts">Kontaktai</a>
     </nav>
 </header>
-<aside>
+<aside     >
     <section class="amalker">
         <h4>Reklama:</h4>
         <img src="https://picsum.photos/240/300" alt="Reklama">
@@ -39,16 +42,17 @@
         </section>
     </section>
     <section id="portfolio"><h1>Portfolio</h1></section>
-    <section id="contacts"><h1>Kontaktai</h1></section>
+    <section id="contacts"> <h1>Kontaktai</h1><div id="forma"></div>
+        </section>
 </main>
 <footer>
     <span>
         Visos teisės saugomos 2020&copy;
     </span>
 </footer>
-
-<script src="js/teswt.js"></script>
-<script src="navigacija.js"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="javascript/formSubmit.js"></script>
+<script src="javascript/navigacija.js"></script>
+<script src="javascript/test.js"></script>
 </body>
 </html>
